Fix main html structure and add display:flex, gap and padding to modal class

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -20,6 +20,9 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  gap: 16px;
+  padding: 16px;
 }
 
 .icon {
@@ -68,13 +71,4 @@ button.cancel {
   color: royalblue;
 }
 
-.header-container {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-}
 
-.header {
-  font-weight: bold;
-  font-size: 20px;
-}
